Fixed image visibility on journal.php and semantically cahnged stylesheet to home to match home.php

--- a/themes/inhabitent/sass/_single-post.scss
+++ b/themes/inhabitent/sass/_single-post.scss
@@ -15,7 +15,7 @@
   }
 }
 .entry-header{
-  max-height: 525px;
+  height: 525px;
   margin-top: 2*$base__space-unit;
   margin-right: $base__space-unit;
   overflow: hidden;
